<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FaqFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/q1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:padding="10dp"
                android:text="@string/q1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@id/q1"
                android:padding="10dp"
                android:id="@+id/a1"
                android:text="@string/a1" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/q2"
                android:layout_below="@id/a1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:padding="10dp"
                android:text="@string/q2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/a2"
                android:textSize="20sp"
                android:layout_below="@id/q2"
                android:padding="10dp"
                android:text="@string/a2" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/q3"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:layout_below="@id/a2"
                android:padding="10dp"
                android:text="@string/q3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/a3"
                android:layout_below="@id/q3"
                android:padding="10dp"
                android:text="@string/a3" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/q4"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:layout_below="@id/a3"
                android:padding="10dp"
                android:text="@string/q4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/a4"
                android:layout_below="@id/q4"
                android:padding="10dp"
                android:text="@string/a4" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/q5"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/orange"
                android:layout_below="@id/a4"
                android:padding="10dp"
                android:text="@string/q5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@id/q5"
                android:padding="10dp"
                android:text="@string/a5" />
        </RelativeLayout>
    </ScrollView>



</RelativeLayout>